# fireworks_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: Cargo.toml  main_benchmarks.rs
fireworks/: Cargo.toml
fireworks/benches/: fibonacci_benchmark.rs  fireworks_benchmarks.rs
fireworks/src/: collection.rs  fibonacci.rs  lib.rs  main.rs  romans.rs
fireworks/src/romans/: context.rs  expression.rs  hundreds.rs  ones.rs  tens.rs  thousands.rs
fireworks/tests/: fibonacci_test.rs
